[tool.poetry]
name = "eniat"
version = "0.0.1"
description = "Experimental Neuroimaging Analaysis Tool"
authors = ["SungHo Lee <shlee@unc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scikit-image = "^0.21.0"
nibabel = "^5.1.0"
scipy = "^1.11.1"
patsy = "^0.5.3"
statsmodels = "^0.14.0"
tqdm = "^4.66.1"
simpleitk = {version = "^2.2.1", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
